feat: add Qwen2.5-3B Buddhist LoRA adapter model
Add trained LoRA adapter for Buddhist sutra knowledge fine-tuning:

Model Files:
- adapter_model.safetensors (229MB): LoRA weights for Qwen2.5-3B
- training_args.bin: Training configuration and hyperparameters

Configuration:
- .gitattributes: Configure Git LFS for large model files (.safetensors, .bin)
- .gitignore: Update to track final model outputs while ignoring intermediate checkpoints

Training Details:
- Base model: Qwen2.5-3B
- Method: LoRA (Low-Rank Adaptation)
- Dataset: Buddhist sutra knowledge corpus

--- a/.gitignore
+++ b/.gitignore
@@ -24,11 +24,8 @@ env/
 *.log
 nohup.out
 
-# Model Checkpoints (too large for git)
+# Model Checkpoints (intermediate checkpoints)
 saves/*/checkpoint-*/
-*.safetensors
-*.bin
-!adapter_config.json
 
 # Temporary files
 .DS_Store
