feat: 扩充数据集至 4,386 条 QA，更新完整 CBETA 原文
数据集更新：
- 总 QA: 4,386 条 (12 种子 + 4,374 生成)
- 训练集: 3,947 条 / 验证集: 439 条
- 覆盖 18 部经典，713K 字原文
- 答案平均 387 字，质量一致

新增内容：
- raw/: 18 部完整 CBETA 经文 (去注释版)
- 并发版 QA 生成脚本 (5 线程)
- 更新 train_config.yaml 支持 7B 模型

技术细节：
- 使用 Qwen-plus API 生成
- 1,569 文本块，每块 500 字
- 每块 3 个多角度 QA

--- a/train_config.yaml
+++ b/train_config.yaml
@@ -1,4 +1,4 @@
-model_name_or_path: Qwen/Qwen2.5-3B-Instruct
+model_name_or_path: Qwen/Qwen2.5-7B-Instruct
 trust_remote_code: true
 
 stage: sft
@@ -9,14 +9,14 @@ lora_alpha: 64
 lora_dropout: 0.05
 lora_target: all
 
-dataset_dir: /home/guyii/buddhist_data
+dataset_dir: ./output
 dataset: buddhist_train
 eval_dataset: buddhist_val
 template: qwen
 cutoff_len: 1024
 preprocessing_num_workers: 4
 
-output_dir: /home/guyii/buddhist_data/saves/qwen2.5-3b-buddhist-lora
+output_dir: ./saves/qwen2.5-7b-buddhist-lora
 logging_steps: 5
 save_steps: 50
 eval_steps: 50
